--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,41 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+03-CSharpIntro/\.vs/03-CSharpIntro/v15/Server/sqlite3/db\.lock
+
+03-CSharpIntro/\.vs/03-CSharpIntro/v15/\.suo
+
+03-CSharpIntro/\.vs/03-CSharpIntro/v15/Server/sqlite3/storage\.ide
+
+03-CSharpIntro/\.vs/03-CSharpIntro/v15/Server/sqlite3/storage\.ide-shm
+
+03-CSharpIntro/\.vs/03-CSharpIntro/v15/Server/sqlite3/storage\.ide-wal
+
+03-CSharpIntro/03-CSharpIntro\.sln
+
+03-CSharpIntro/03-CSharpIntro/03-CSharpIntro\.csproj
+
+03-CSharpIntro/03-CSharpIntro/obj/03-CSharpIntro\.csproj\.nuget\.cache
+
+03-CSharpIntro/03-CSharpIntro/obj/03-CSharpIntro\.csproj\.nuget\.g\.props
+
+03-CSharpIntro/03-CSharpIntro/obj/03-CSharpIntro\.csproj\.nuget\.g\.targets
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/03-CSharpIntro\.AssemblyInfo\.cs
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/03-CSharpIntro\.AssemblyInfoInputs\.cache
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/03-CSharpIntro\.assets\.cache
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/03-CSharpIntro\.csproj\.CoreCompileInputs\.cache
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/03-CSharpIntro\.csprojAssemblyReference\.cache
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92\.cs
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1\.cs
+
+03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3\.cs
+
+03-CSharpIntro/03-CSharpIntro/obj/project\.assets\.json
