--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,11 @@ venv.bak/
 03-CSharpIntro/03-CSharpIntro/obj/Debug/netcoreapp2\.1/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3\.cs
 
 03-CSharpIntro/03-CSharpIntro/obj/project\.assets\.json
+
+03-CSharpIntro\.sln
+
+03-CSharpIntro/obj/
+
+03-CSharpIntro/03-CSharpIntro\.csproj
+
+\.vs/
